[gd_scene load_steps=2 format=3 uid="uid://cuf2jgmqhrjat"]

[ext_resource type="Script" path="res://Interface/Interface.gd" id="1_8dd7u"]

[node name="Interface" type="CanvasLayer"]
script = ExtResource("1_8dd7u")
username_color = Color(0, 0.384314, 0.411765, 1)

[node name="LoginScreen" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -494.5
offset_right = 560.0
offset_bottom = 494.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Username" type="TextEdit" parent="LoginScreen"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
placeholder_text = "Username"
scroll_fit_content_height = true
caret_blink = true

[node name="ServerCredentialsContainer" type="HBoxContainer" parent="LoginScreen"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Server" type="TextEdit" parent="LoginScreen/ServerCredentialsContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "127.0.0.1"
placeholder_text = "Server"
scroll_fit_content_height = true

[node name="Port" type="TextEdit" parent="LoginScreen/ServerCredentialsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "25000"
placeholder_text = "Server"
scroll_fit_content_height = true

[node name="HostButton" type="Button" parent="LoginScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Host Server"

[node name="ConnectButton" type="Button" parent="LoginScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Connect Server"

[node name="LobbyScreenControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyScreenScroll" type="ScrollContainer" parent="LobbyScreenControl"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 826.0
offset_bottom = 818.0
horizontal_scroll_mode = 0

[node name="LobbyScreen" type="VBoxContainer" parent="LobbyScreenControl/LobbyScreenScroll"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MessagesContainer" type="VBoxContainer" parent="LobbyScreenControl"]
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -800.0
offset_bottom = 773.0
grow_horizontal = 0

[node name="Messages" type="RichTextLabel" parent="LobbyScreenControl/MessagesContainer"]
custom_minimum_size = Vector2(800, 800)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 90
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 45
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
text = "[center][b]Messages[/b][/center]
"

[node name="SendMessage" type="LineEdit" parent="LobbyScreenControl/MessagesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Type message..."

[connection signal="pressed" from="LoginScreen/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="LoginScreen/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="text_submitted" from="LobbyScreenControl/MessagesContainer/SendMessage" to="." method="_on_send_message"]
